--- a/web_static/styles/102-filters.css
+++ b/web_static/styles/102-filters.css
@@ -6,7 +6,6 @@
     position: relative;
 }
 
-
 .popover {
     display: none;
     background-color: #FAFAFA;
@@ -45,21 +44,12 @@
     padding-left: 0;
 }
 
-
-
-
 .locations:hover .popover {
     display:block;
 }
 .amenities:hover .popover {
     display:block;
 }
-/* .locations:hover + ul {background: #555;}
-ul li:hover ul {display: block;}
-
-.filters div:hover + .popover{
-    display: block;
-} */
 
 button {
     position: absolute;
@@ -113,32 +103,31 @@ button:hover {
 
 @media only screen and (min-width : 150px) and (max-width : 700px)
 {
-.filters
-{
-    width: 95%;
-    margin: 0 auto;
-            height: 15ch;
-}
+    .filters {
+        width: 95%;
+        margin: 0 auto;
+        height: 15ch;
+    }
 
     .locations h4, .amenities h4 {
-            font-size: 1.5em;
-            margin-left: 10vw;
+        font-size: 1.5em;
+        margin-left: 10vw;
     }
 
     .locations h3, .amenities h3 {
-            font-size: 1.5em;
-            margin-left: 10vw;
+        font-size: 1.5em;
+        margin-left: 10vw;
     }
 
     button {
-            font-size: 1.5em;
+        font-size: 1.5em;
     }
 
     .popover h2 {
-            font-size: 1.5em;
+        font-size: 1.5em;
     }
 
     .popover li {
-            font-size: 1.4rem;
+        font-size: 1.4rem;
     }
 }
