responsive styles for filter

--- a/web_static/styles/103-filters.css
+++ b/web_static/styles/103-filters.css
@@ -6,7 +6,6 @@
     position: relative;
 }
 
-
 .popover {
     display: none;
     background-color: #FAFAFA;
@@ -17,23 +16,24 @@
     padding-bottom: 10%;
     padding-left: 0;
 }
+
 .popover li {
     list-style: none;
 }
 
-.popover h2{
+.popover h2 {
     display: inline-block;
     margin-bottom: 0;
     margin-top: 0;
     font-size: 16px;
 }
 
-.popover li{
+.popover li {
     padding: 0 10%;
     margin: .5rem 0;
 }
 
-.popover .pop{
+.popover .pop {
     padding: 10%;
 }
 
@@ -45,21 +45,13 @@
     padding-left: 0;
 }
 
-
-
-
 .locations:hover .popover {
     display:block;
 }
+
 .amenities:hover .popover {
     display:block;
 }
-/* .locations:hover + ul {background: #555;}
-ul li:hover ul {display: block;}
-
-.filters div:hover + .popover{
-    display: block;
-} */
 
 button {
     position: absolute;
@@ -99,7 +91,6 @@ button:hover {
     font-weight: 600;
     margin-bottom: 0;
     margin-left: 25%;
-    color: inherit;
 }
 
 .locations h4, .amenities h4 {
@@ -108,37 +99,35 @@ button:hover {
     margin-left: 25%;
     font-weight: 400;
     font-size: 14px;
-    color: inherit;
 }
 
 @media only screen and (min-width : 150px) and (max-width : 700px)
 {
-.filters
-{
-    width: 95%;
-    margin: 0 auto;
-            height: 15ch;
-}
+    .filters {
+        width: 95%;
+        margin: 0 auto;
+        height: 15ch;
+    }
 
     .locations h4, .amenities h4 {
-            font-size: 1.5em;
-            margin-left: 10vw;
+        font-size: 1.5em;
+        margin-left: 10vw;
     }
 
     .locations h3, .amenities h3 {
-            font-size: 1.5em;
-            margin-left: 10vw;
+        font-size: 1.5em;
+        margin-left: 10vw;
     }
 
     button {
-            font-size: 1.5em;
+        font-size: 1.5em;
     }
 
     .popover h2 {
-            font-size: 1.5em;
+        font-size: 1.5em;
     }
 
     .popover li {
-            font-size: 1.4rem;
+        font-size: 1.4rem;
     }
 }
